# weerman

./: .gitignore  .travis.yml  Procfile  README.md  pyproject.toml  requirements.txt  travis.yml  weerman.yml
.github/workflows/: python-package.yml
tests/: test_app.py  test_coordinates.py  test_weather.py
weerman/: app.py  coordinates.py  weather.py
