[tool.poetry]
name = "weerman"
version = "0.1.0"
description = ""
authors = ["Vsevolod Bazhan <vsevozhan@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"
geopy = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.3.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
